story: list & get
